allprojects {
    group 'tech.slideshare'
    version '1.0-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'application'

    compileJava {
        options.encoding = 'UTF-8'
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }
    
    test {
        useJUnitPlatform()
    }

    repositories {
        mavenCentral()
    }
}